--- a/src/client/app/components/shared/breadcrumb/breadcrumb.style.scss
+++ b/src/client/app/components/shared/breadcrumb/breadcrumb.style.scss
@@ -1,4 +1,20 @@
 .breadcrumb-component {
     grid-column-start: 2;
     grid-column-end: 12;
+    .breadcrumb-element {
+        font-size: 14px;
+        color: #999;
+        padding-left: 5px;
+        &::before {
+            content: '>';
+            margin-right: 5px;
+            font-weight: normal;
+        }
+        &:first-child::before {
+            content: '';
+        }
+        &:last-child {
+            font-weight: bold;
+        }
+    }
 }
