Added product detail route and components backbone

--- a/src/client/app/components/shared/product-row/product-row.style.scss
+++ b/src/client/app/components/shared/product-row/product-row.style.scss
@@ -2,6 +2,7 @@
     padding: 16px 0;
     display: flex;
     border-bottom: 1px solid #eee;
+    text-decoration: none;
     .product-row-product-image {
         display: flex;
         justify-content: center;
