Added product details styles, and data

--- a/src/client/app/components/containers/product-detail/product-detail.style.scss
+++ b/src/client/app/components/containers/product-detail/product-detail.style.scss
@@ -1,5 +1,24 @@
 .product-detail-component {
+    display: flex;
+    flex-wrap: wrap;
     background: #fff;
     border-radius: 4px;
     padding: 32px;
+    .product-detail-image {
+        flex-basis: 680px;
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+    .product-detail-info {
+        flex-basis: 300px;
+    }
+    .product-detail-description {
+        flex-grow: 1;
+        h3 {
+            font-size: 28px;
+            margin: 32px 0;
+        }
+    }
 }
