Added description, and missing styles to product detail

--- a/src/client/app/components/containers/product-detail/product-detail.style.scss
+++ b/src/client/app/components/containers/product-detail/product-detail.style.scss
@@ -1,6 +1,7 @@
 .product-detail-component {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     background: #fff;
     border-radius: 4px;
     padding: 32px;
